--- a/app.json
+++ b/app.json
@@ -2,6 +2,12 @@
   "expo": {
     "name": "svt",
     "slug": "svt",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "icon": "./assets/icon.png",
+    "extra": {
+      "eas": {
+        "projectId": "7bf10084-678f-4fdf-abf2-cb1b9dfb26bd"
+      }
+    }
   }
 }
