--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.25",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.2.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.0",
@@ -21,6 +24,8 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-webview": "13.12.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
